Fix broken navigation alignment

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -52,7 +52,8 @@ a:hover {
 }
 
 #logo {
-    display: inline-block;
+    display: block;
+    float: left;
     width: 220px;
     height: 73px;
     margin: 20px 0 0 0;
@@ -169,7 +170,7 @@ footer {
     .wrapper {
         margin: 0 auto;
         padding: 0 70px;
-        min-width: 740px;
+        min-width: 820px;
         max-width: 1100px;
     }
     #header {
@@ -177,6 +178,13 @@ footer {
         top: 0;
         min-width: 100%;
         height: 110px;
+    }
+    #header:after
+    {
+        content: "";
+        display: block;
+        clear: both;
+        height: 0;
     }
     nav {
         float: right;
@@ -277,7 +285,7 @@ footer {
 
 }
 
-@media only screen and (max-width: 640px), only screen and (max-device-width: 640px) {
+@media only screen and (max-device-width: 640px) {
     
     h1 {
         font-family: "Segoe UI Light", "Segoe UI", Arial, Helvetica, sans-serif;
@@ -293,11 +301,22 @@ footer {
         color: #4e4e4e;
         padding-top: 10px;
     }
+    #header {
+        min-width: 100%;
+    }
+    #header:after
+    {
+        content: "";
+        display: block;
+        clear: both;
+        height: 0;
+    }
     .wrapper {
         padding: 0 20px;
         max-width: 600px;
     }
     nav {
+        float: left;
         padding: 6px 0 20px 62px;
     }
     nav li {
@@ -366,8 +385,12 @@ footer {
     }
 }
 
+@media only screen and (max-width: 640px) and (min-device-width: 640px) {
+    #header {
+        position: absolute;
+    }
+}
 @media only screen and (min-width: 641px) and (max-width: 1024px), only screen and (min-device-width: 641px) and (max-device-width: 1024px) {
-    
     #header {
         position: absolute;
     }
